fix button alignment

--- a/app/assets/stylesheets/new_styles/02_buttons.scss
+++ b/app/assets/stylesheets/new_styles/02_buttons.scss
@@ -16,6 +16,7 @@
   -moz-box-shadow:    0px 5px 4px rgba(50, 50, 50, 0.75);
   box-shadow:         0px 5px 4px rgba(50, 50, 50, 0.75);
   color: white;
+  text-align: center;
 
   &:hover, &:visited {
     color: white;
